GKE/vessel-deployment.yaml
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: vessel
  labels:
    app: vessel
spec:
  replicas: 4
  template:
    metadata:
      labels:
        app: vessel
    spec:
        containers:
        - name: vessel
          image: gcr.io/pso-suchit/vessel-service:ssl
          imagePullPolicy: Always
          livenessProbe:
            httpGet:
              path: /
              port: 8000
              scheme: HTTP
          readinessProbe:
            httpGet:
              path: /
              port: 8000
              scheme: HTTP
          ports:
          - containerPort: 443
            protocol: TCP
            name: vessel-port
          - containerPort: 9000
            protocol: TCP
            name: vheal-port
          - containerPort: 8000
            protocol: TCP
            name: health-port
