GKE/vessel-lb.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: vessel-lb
  labels:
    type: vessel-srv
  annotations:
     service.alpha.kubernetes.io/app-protocols: '{"http2-service":"HTTP2", "http-service": "HTTP"}'
spec:
  type: LoadBalancer 
  ports:
  - port: 443
    protocol: TCP
    targetPort: 443
    name: http2-service
  - port: 9000
    protocol: TCP
    targetPort: 9000
    name: http-service
  selector:
    app: vessel
